colang-cli/tests/samples/features/templates/good/new_expr_type_parameter.co
struct Foo<T> {
  ptr: &T;

  fun run(self) {
    self.ptr = new T;
  }
}

fun main() {
  var f: Foo<int>;
  f.run();
}
