colang-cli/tests/samples/features/templates/compilation_error/type_template_name_collision.co
struct Foo<T> {
  x: T;
  x: T;
}

fun main() {
  var f: Foo<int>;
}
